include/maplibre_native_c/map.h


typedef enum mln_camera_option_field : uint32_t {
  MLN_CAMERA_OPTION_CENTER = 1U << 0U,
  MLN_CAMERA_OPTION_ZOOM = 1U << 1U,
  MLN_CAMERA_OPTION_BEARING = 1U << 2U,
  MLN_CAMERA_OPTION_PITCH = 1U << 3U,
  MLN_CAMERA_OPTION_CENTER_ALTITUDE = 1U << 4U,
  MLN_CAMERA_OPTION_PADDING = 1U << 5U,
  MLN_CAMERA_OPTION_ANCHOR = 1U << 6U,
  MLN_CAMERA_OPTION_ROLL = 1U << 7U,
  MLN_CAMERA_OPTION_FOV = 1U << 8U,
} mln_camera_option_field;
typedef enum mln_animation_option_field : uint32_t {
  MLN_ANIMATION_OPTION_DURATION = 1U << 0U,
  MLN_ANIMATION_OPTION_VELOCITY = 1U << 1U,
  MLN_ANIMATION_OPTION_MIN_ZOOM = 1U << 2U,
  MLN_ANIMATION_OPTION_EASING = 1U << 3U,
  MLN_ANIMATION_OPTION_TRANSITION_ID = 1U << 4U,
} mln_animation_option_field;
typedef enum mln_camera_fit_option_field : uint32_t {
  MLN_CAMERA_FIT_OPTION_PADDING = 1U << 0U,
  MLN_CAMERA_FIT_OPTION_BEARING = 1U << 1U,
  MLN_CAMERA_FIT_OPTION_PITCH = 1U << 2U,
} mln_camera_fit_option_field;
typedef enum mln_bound_option_field : uint32_t {
  MLN_BOUND_OPTION_BOUNDS = 1U << 0U,
  MLN_BOUND_OPTION_MIN_ZOOM = 1U << 1U,
  MLN_BOUND_OPTION_MAX_ZOOM = 1U << 2U,
  MLN_BOUND_OPTION_MIN_PITCH = 1U << 3U,
  MLN_BOUND_OPTION_MAX_PITCH = 1U << 4U,
  MLN_BOUND_OPTION_UNBOUNDED = 1U << 5U,
} mln_bound_option_field;
typedef enum mln_free_camera_option_field : uint32_t {
  MLN_FREE_CAMERA_OPTION_POSITION = 1U << 0U,
  MLN_FREE_CAMERA_OPTION_ORIENTATION = 1U << 1U,
} mln_free_camera_option_field;
typedef enum mln_projection_mode_field : uint32_t {
  MLN_PROJECTION_MODE_AXONOMETRIC = 1U << 0U,
  MLN_PROJECTION_MODE_X_SKEW = 1U << 1U,
  MLN_PROJECTION_MODE_Y_SKEW = 1U << 2U,
} mln_projection_mode_field;
typedef enum mln_map_debug_option : uint32_t {
  MLN_MAP_DEBUG_TILE_BORDERS = 1U << 1U,
  MLN_MAP_DEBUG_PARSE_STATUS = 1U << 2U,
  MLN_MAP_DEBUG_TIMESTAMPS = 1U << 3U,
  MLN_MAP_DEBUG_COLLISION = 1U << 4U,
  MLN_MAP_DEBUG_OVERDRAW = 1U << 5U,
  MLN_MAP_DEBUG_STENCIL_CLIP = 1U << 6U,
  MLN_MAP_DEBUG_DEPTH_BUFFER = 1U << 7U,
} mln_map_debug_option;
typedef enum mln_north_orientation : uint32_t {
  MLN_NORTH_ORIENTATION_UP = 0,
  MLN_NORTH_ORIENTATION_RIGHT = 1,
  MLN_NORTH_ORIENTATION_DOWN = 2,
  MLN_NORTH_ORIENTATION_LEFT = 3,
} mln_north_orientation;
typedef enum mln_constrain_mode : uint32_t {
  MLN_CONSTRAIN_MODE_NONE = 0,
  MLN_CONSTRAIN_MODE_HEIGHT_ONLY = 1,
  MLN_CONSTRAIN_MODE_WIDTH_AND_HEIGHT = 2,
  MLN_CONSTRAIN_MODE_SCREEN = 3,
} mln_constrain_mode;
typedef enum mln_viewport_mode : uint32_t {
  MLN_VIEWPORT_MODE_DEFAULT = 0,
  MLN_VIEWPORT_MODE_FLIPPED_Y = 1,
} mln_viewport_mode;
typedef enum mln_map_viewport_option_field : uint32_t {
  MLN_MAP_VIEWPORT_OPTION_NORTH_ORIENTATION = 1U << 0U,
  MLN_MAP_VIEWPORT_OPTION_CONSTRAIN_MODE = 1U << 1U,
  MLN_MAP_VIEWPORT_OPTION_VIEWPORT_MODE = 1U << 2U,
  MLN_MAP_VIEWPORT_OPTION_FRUSTUM_OFFSET = 1U << 3U,
} mln_map_viewport_option_field;
typedef enum mln_tile_lod_mode : uint32_t {
  MLN_TILE_LOD_MODE_DEFAULT = 0,
  MLN_TILE_LOD_MODE_DISTANCE = 1,
} mln_tile_lod_mode;
typedef enum mln_map_tile_option_field : uint32_t {
  MLN_MAP_TILE_OPTION_PREFETCH_ZOOM_DELTA = 1U << 0U,
  MLN_MAP_TILE_OPTION_LOD_MIN_RADIUS = 1U << 1U,
  MLN_MAP_TILE_OPTION_LOD_SCALE = 1U << 2U,
  MLN_MAP_TILE_OPTION_LOD_PITCH_THRESHOLD = 1U << 3U,
  MLN_MAP_TILE_OPTION_LOD_ZOOM_SHIFT = 1U << 4U,
  MLN_MAP_TILE_OPTION_LOD_MODE = 1U << 5U,
} mln_map_tile_option_field;
typedef enum mln_map_mode : uint32_t {
  MLN_MAP_MODE_CONTINUOUS = 0,
  MLN_MAP_MODE_STATIC = 1,
  MLN_MAP_MODE_TILE = 2,
} mln_map_mode;
typedef enum mln_geometry_type : uint32_t {
  MLN_GEOMETRY_TYPE_EMPTY = 0,
  MLN_GEOMETRY_TYPE_POINT = 1,
  MLN_GEOMETRY_TYPE_LINE_STRING = 2,
  MLN_GEOMETRY_TYPE_POLYGON = 3,
  MLN_GEOMETRY_TYPE_MULTI_POINT = 4,
  MLN_GEOMETRY_TYPE_MULTI_LINE_STRING = 5,
  MLN_GEOMETRY_TYPE_MULTI_POLYGON = 6,
  MLN_GEOMETRY_TYPE_GEOMETRY_COLLECTION = 7,
} mln_geometry_type;
typedef enum mln_json_value_type : uint32_t {
  MLN_JSON_VALUE_TYPE_NULL = 0,
  MLN_JSON_VALUE_TYPE_BOOL = 1,
  MLN_JSON_VALUE_TYPE_UINT = 2,
  MLN_JSON_VALUE_TYPE_INT = 3,
  MLN_JSON_VALUE_TYPE_DOUBLE = 4,
  MLN_JSON_VALUE_TYPE_STRING = 5,
  MLN_JSON_VALUE_TYPE_ARRAY = 6,
  MLN_JSON_VALUE_TYPE_OBJECT = 7,
} mln_json_value_type;
typedef enum mln_feature_state_selector_field : uint32_t {
  MLN_FEATURE_STATE_SELECTOR_SOURCE_LAYER_ID = 1U << 0U,
  MLN_FEATURE_STATE_SELECTOR_FEATURE_ID = 1U << 1U,
  MLN_FEATURE_STATE_SELECTOR_STATE_KEY = 1U << 2U,
} mln_feature_state_selector_field;
typedef enum mln_feature_identifier_type : uint32_t {
  MLN_FEATURE_IDENTIFIER_TYPE_NULL = 0,
  MLN_FEATURE_IDENTIFIER_TYPE_UINT = 1,
  MLN_FEATURE_IDENTIFIER_TYPE_INT = 2,
  MLN_FEATURE_IDENTIFIER_TYPE_DOUBLE = 3,
  MLN_FEATURE_IDENTIFIER_TYPE_STRING = 4,
} mln_feature_identifier_type;
typedef enum mln_geojson_type : uint32_t {
  MLN_GEOJSON_TYPE_GEOMETRY = 1,
  MLN_GEOJSON_TYPE_FEATURE = 2,
  MLN_GEOJSON_TYPE_FEATURE_COLLECTION = 3,
} mln_geojson_type;