bindings/vala/vapi/maplibre-native-c.vapi

/* Private raw VAPI for the MapLibre Native C API. */

[CCode (cprefix = "mln_", lower_case_cprefix = "mln_", cheader_filename = "maplibre_native_c/base.h,maplibre_native_c/diagnostics.h,maplibre_native_c/logging.h,maplibre_native_c/runtime.h,maplibre_native_c/map.h,maplibre_native_c/camera.h,maplibre_native_c/style.h,maplibre_native_c/query.h,maplibre_native_c/render_target.h,maplibre_native_c/texture.h,maplibre_native_c/surface.h,maplibre_native_c/render_session.h,maplibre_native_c/projection.h")]
namespace MaplibreNative.Raw {
    [CCode (cname = "mln_status", cprefix = "MLN_STATUS_", has_type_id = false)]
    public enum Status {
        OK,
        INVALID_ARGUMENT,
        INVALID_STATE,
        WRONG_THREAD,
        UNSUPPORTED,
        NATIVE_ERROR
    }

    [CCode (cname = "mln_render_backend_flag", cprefix = "MLN_RENDER_BACKEND_FLAG_", has_type_id = false)]
    [Flags]
    public enum RenderBackendFlag {
        METAL,
        VULKAN,
        OPENGL
    }

    [CCode (cname = "mln_opengl_context_provider_flag", cprefix = "MLN_OPENGL_CONTEXT_PROVIDER_FLAG_", has_type_id = false)]
    [Flags]
    public enum OpenGLContextProviderFlag {
        WGL,
        EGL
    }

    [CCode (cname = "mln_opengl_context_platform", cprefix = "MLN_OPENGL_CONTEXT_PLATFORM_", has_type_id = false)]
    public enum OpenGLContextPlatform {
        UNSPECIFIED,
        WGL,
        EGL
    }

    [CCode (cname = "mln_network_status", cprefix = "MLN_NETWORK_STATUS_", has_type_id = false)]
    public enum NetworkStatus {
        ONLINE,
        OFFLINE
    }

    [CCode (cname = "mln_map_mode", cprefix = "MLN_MAP_MODE_", has_type_id = false)]
    public enum MapMode {
        CONTINUOUS,
        STATIC,
        TILE
    }

    [CCode (cname = "mln_map_debug_option", cprefix = "MLN_MAP_DEBUG_", has_type_id = false)]
    [Flags]
    public enum MapDebugOption {
        TILE_BORDERS,
        PARSE_STATUS,
        TIMESTAMPS,
        COLLISION,
        OVERDRAW,
        STENCIL_CLIP,
        DEPTH_BUFFER
    }

    [CCode (cname = "mln_north_orientation", cprefix = "MLN_NORTH_ORIENTATION_", has_type_id = false)]
    public enum NorthOrientation {
        UP,
        RIGHT,
        DOWN,
        LEFT
    }

    [CCode (cname = "mln_constrain_mode", cprefix = "MLN_CONSTRAIN_MODE_", has_type_id = false)]
    public enum ConstrainMode {
        NONE,
        HEIGHT_ONLY,
        WIDTH_AND_HEIGHT,
        SCREEN
    }

    [CCode (cname = "mln_viewport_mode", cprefix = "MLN_VIEWPORT_MODE_", has_type_id = false)]
    public enum ViewportMode {
        DEFAULT,
        FLIPPED_Y
    }

    [CCode (cname = "mln_camera_option_field", cprefix = "MLN_CAMERA_OPTION_", has_type_id = false)]
    [Flags]
    public enum CameraOptionField {
        CENTER,
        ZOOM,
        BEARING,
        PITCH,
        CENTER_ALTITUDE,
        PADDING,
        ANCHOR,
        ROLL,
        FOV
    }

    [CCode (cname = "mln_animation_option_field", cprefix = "MLN_ANIMATION_OPTION_", has_type_id = false)]
    [Flags]
    public enum AnimationOptionField {
        DURATION,
        VELOCITY,
        MIN_ZOOM,
        EASING
    }

    [CCode (cname = "mln_camera_fit_option_field", cprefix = "MLN_CAMERA_FIT_OPTION_", has_type_id = false)]
    [Flags]
    public enum CameraFitOptionField {
        PADDING,
        BEARING,
        PITCH
    }

    [CCode (cname = "mln_bound_option_field", cprefix = "MLN_BOUND_OPTION_", has_type_id = false)]
    [Flags]
    public enum BoundOptionField {
        BOUNDS,
        MIN_ZOOM,
        MAX_ZOOM,
        MIN_PITCH,
        MAX_PITCH
    }

    [CCode (cname = "mln_free_camera_option_field", cprefix = "MLN_FREE_CAMERA_OPTION_", has_type_id = false)]
    [Flags]
    public enum FreeCameraOptionField {
        POSITION,
        ORIENTATION
    }

    [CCode (cname = "mln_projection_mode_field", cprefix = "MLN_PROJECTION_MODE_", has_type_id = false)]
    [Flags]
    public enum ProjectionModeField {
        AXONOMETRIC,
        X_SKEW,
        Y_SKEW
    }

    [CCode (cname = "mln_map_viewport_option_field", cprefix = "MLN_MAP_VIEWPORT_OPTION_", has_type_id = false)]
    [Flags]
    public enum MapViewportOptionField {
        NORTH_ORIENTATION,
        CONSTRAIN_MODE,
        VIEWPORT_MODE,
        FRUSTUM_OFFSET
    }

    [CCode (cname = "mln_tile_lod_mode", cprefix = "MLN_TILE_LOD_MODE_", has_type_id = false)]
    public enum TileLodMode {
        DEFAULT,
        DISTANCE
    }

    [CCode (cname = "mln_map_tile_option_field", cprefix = "MLN_MAP_TILE_OPTION_", has_type_id = false)]
    [Flags]
    public enum MapTileOptionField {
        PREFETCH_ZOOM_DELTA,
        LOD_MIN_RADIUS,
        LOD_SCALE,
        LOD_PITCH_THRESHOLD,
        LOD_ZOOM_SHIFT,
        LOD_MODE
    }

    [CCode (cname = "mln_runtime_option_flag", cprefix = "MLN_RUNTIME_OPTION_", has_type_id = false)]
    [Flags]
    public enum RuntimeOptionFlag {
        MAXIMUM_CACHE_SIZE
    }

    [CCode (cname = "mln_ambient_cache_operation", cprefix = "MLN_AMBIENT_CACHE_OPERATION_", has_type_id = false)]
    public enum AmbientCacheOperation {
        RESET_DATABASE,
        PACK_DATABASE,
        INVALIDATE,
        CLEAR
    }

    [SimpleType]
    [CCode (cname = "mln_offline_region_id", has_type_id = false)]
    public struct OfflineRegionId : int64 {
    }

    [SimpleType]
    [CCode (cname = "mln_offline_operation_id", has_type_id = false)]
    public struct OfflineOperationId : uint64 {
    }

    [CCode (cname = "mln_offline_region_definition_type", cprefix = "MLN_OFFLINE_REGION_DEFINITION_", has_type_id = false)]
    public enum OfflineRegionDefinitionType {
        TILE_PYRAMID,
        GEOMETRY
    }

    [CCode (cname = "mln_offline_region_download_state", cprefix = "MLN_OFFLINE_REGION_DOWNLOAD_", has_type_id = false)]
    public enum OfflineRegionDownloadState {
        INACTIVE,
        ACTIVE
    }

    [CCode (cname = "mln_offline_operation_kind", cprefix = "MLN_OFFLINE_OPERATION_", has_type_id = false)]
    public enum OfflineOperationKind {
        AMBIENT_CACHE,
        REGION_CREATE,
        REGION_GET,
        REGIONS_LIST,
        REGIONS_MERGE_DATABASE,
        REGION_UPDATE_METADATA,
        REGION_GET_STATUS,
        REGION_SET_OBSERVED,
        REGION_SET_DOWNLOAD_STATE,
        REGION_INVALIDATE,
        REGION_DELETE
    }

    [CCode (cname = "mln_offline_operation_result_kind", cprefix = "MLN_OFFLINE_OPERATION_RESULT_", has_type_id = false)]
    public enum OfflineOperationResultKind {
        NONE,
        REGION,
        OPTIONAL_REGION,
        REGION_LIST,
        REGION_STATUS
    }

    [CCode (cname = "mln_runtime_event_type", cprefix = "MLN_RUNTIME_EVENT_", has_type_id = false)]
    public enum RuntimeEventType {
        MAP_CAMERA_WILL_CHANGE,
        MAP_CAMERA_IS_CHANGING,
        MAP_CAMERA_DID_CHANGE,
        MAP_STYLE_LOADED,
        MAP_LOADING_STARTED,
        MAP_LOADING_FINISHED,
        MAP_LOADING_FAILED,
        MAP_IDLE,
        MAP_RENDER_UPDATE_AVAILABLE,
        MAP_RENDER_ERROR,
        MAP_STILL_IMAGE_FINISHED,
        MAP_STILL_IMAGE_FAILED,
        MAP_RENDER_FRAME_STARTED,
        MAP_RENDER_FRAME_FINISHED,
        MAP_RENDER_MAP_STARTED,
        MAP_RENDER_MAP_FINISHED,
        MAP_STYLE_IMAGE_MISSING,
        MAP_TILE_ACTION,
        OFFLINE_REGION_STATUS_CHANGED,
        OFFLINE_REGION_RESPONSE_ERROR,
        OFFLINE_REGION_TILE_COUNT_LIMIT_EXCEEDED,
        OFFLINE_OPERATION_COMPLETED
    }

    [CCode (cname = "mln_runtime_event_source_type", cprefix = "MLN_RUNTIME_EVENT_SOURCE_", has_type_id = false)]
    public enum RuntimeEventSourceType {
        RUNTIME,
        MAP
    }

    [CCode (cname = "mln_runtime_event_payload_type", cprefix = "MLN_RUNTIME_EVENT_PAYLOAD_", has_type_id = false)]
    public enum RuntimeEventPayloadType {
        NONE,
        RENDER_FRAME,
        RENDER_MAP,
        STYLE_IMAGE_MISSING,
        TILE_ACTION,
        OFFLINE_REGION_STATUS,
        OFFLINE_REGION_RESPONSE_ERROR,
        OFFLINE_REGION_TILE_COUNT_LIMIT,
        OFFLINE_OPERATION_COMPLETED
    }

    [CCode (cname = "mln_render_mode", cprefix = "MLN_RENDER_MODE_", has_type_id = false)]
    public enum RenderMode {
        PARTIAL,
        FULL
    }

    [CCode (cname = "mln_tile_operation", cprefix = "MLN_TILE_OPERATION_", has_type_id = false)]
    public enum TileOperation {
        REQUESTED_FROM_CACHE,
        REQUESTED_FROM_NETWORK,
        LOAD_FROM_NETWORK,
        LOAD_FROM_CACHE,
        START_PARSE,
        END_PARSE,
        ERROR,
        CANCELLED,
        NULL
    }

    [CCode (cname = "mln_log_severity", cprefix = "MLN_LOG_SEVERITY_", has_type_id = false)]
    public enum LogSeverity {
        INFO,
        WARNING,
        ERROR
    }

    [CCode (cname = "mln_log_severity_mask", cprefix = "MLN_LOG_SEVERITY_MASK_", has_type_id = false)]
    [Flags]
    public enum LogSeverityMask {
        INFO,
        WARNING,
        ERROR,
        DEFAULT,
        ALL
    }

    [CCode (cname = "mln_geometry_type", cprefix = "MLN_GEOMETRY_TYPE_", has_type_id = false)]
    public enum GeometryType {
        EMPTY,
        POINT,
        LINE_STRING,
        POLYGON,
        MULTI_POINT,
        MULTI_LINE_STRING,
        MULTI_POLYGON,
        GEOMETRY_COLLECTION
    }

    [CCode (cname = "mln_json_value_type", cprefix = "MLN_JSON_VALUE_TYPE_", has_type_id = false)]
    public enum JsonValueType {
        NULL,
        BOOL,
        UINT,
        INT,
        DOUBLE,
        STRING,
        ARRAY,
        OBJECT
    }

    [CCode (cname = "mln_feature_identifier_type", cprefix = "MLN_FEATURE_IDENTIFIER_TYPE_", has_type_id = false)]
    public enum FeatureIdentifierType {
        NULL,
        UINT,
        INT,
        DOUBLE,
        STRING
    }

    [CCode (cname = "mln_feature_state_selector_field", cprefix = "MLN_FEATURE_STATE_SELECTOR_", has_type_id = false)]
    [Flags]
    public enum FeatureStateSelectorField {
        SOURCE_LAYER_ID,
        FEATURE_ID,
        STATE_KEY
    }

    [CCode (cname = "mln_geojson_type", cprefix = "MLN_GEOJSON_TYPE_", has_type_id = false)]
    public enum GeoJsonType {
        GEOMETRY,
        FEATURE,
        FEATURE_COLLECTION
    }

    [CCode (cname = "mln_resource_kind", cprefix = "MLN_RESOURCE_KIND_", has_type_id = false)]
    public enum ResourceKind {
        UNKNOWN,
        STYLE,
        SOURCE,
        TILE,
        GLYPHS,
        SPRITE_IMAGE,
        SPRITE_JSON,
        IMAGE
    }

    [CCode (cname = "mln_resource_loading_method", cprefix = "MLN_RESOURCE_LOADING_METHOD_", has_type_id = false)]
    public enum ResourceLoadingMethod {
        ALL,
        CACHE_ONLY,
        NETWORK_ONLY
    }

    [CCode (cname = "mln_resource_priority", cprefix = "MLN_RESOURCE_PRIORITY_", has_type_id = false)]
    public enum ResourcePriority {
        REGULAR,
        LOW
    }

    [CCode (cname = "mln_resource_usage", cprefix = "MLN_RESOURCE_USAGE_", has_type_id = false)]
    public enum ResourceUsage {
        ONLINE,
        OFFLINE
    }

    [CCode (cname = "mln_resource_storage_policy", cprefix = "MLN_RESOURCE_STORAGE_POLICY_", has_type_id = false)]
    public enum ResourceStoragePolicy {
        PERMANENT,
        VOLATILE
    }

    [CCode (cname = "mln_resource_response_status", cprefix = "MLN_RESOURCE_RESPONSE_STATUS_", has_type_id = false)]
    public enum ResourceResponseStatus {
        OK,
        ERROR,
        NO_CONTENT,
        NOT_MODIFIED
    }

    [CCode (cname = "mln_resource_error_reason", cprefix = "MLN_RESOURCE_ERROR_REASON_", has_type_id = false)]
    public enum ResourceErrorReason {
        NONE,
        NOT_FOUND,
        SERVER,
        CONNECTION,
        RATE_LIMIT,
        OTHER
    }

    [CCode (cname = "mln_resource_provider_decision", cprefix = "MLN_RESOURCE_PROVIDER_DECISION_", has_type_id = false)]
    public enum ResourceProviderDecision {
        PASS_THROUGH,
        HANDLE
    }
